<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:src="@mipmap/ic_launcher" />


    <xst.app.com.mylibrary.utils.text.ClearEditText
        android:id="@+id/et_login_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_20"
        android:layout_marginRight="@dimen/space_80"
        android:hint="@string/login_phone_input_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginRight="@dimen/space_80" />

    <xst.app.com.mylibrary.utils.text.ClearEditText
        android:id="@+id/et_login_password"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginRight="@dimen/space_80"
        android:hint="@string/login_password_input_hint"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginRight="@dimen/space_80" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_60"
        android:layout_marginRight="@dimen/space_80"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_register"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/login_forget"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_login_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_80"
        android:layout_marginTop="@dimen/space_30"
        android:layout_marginRight="@dimen/space_80"
        android:text="@string/login_text" />

</LinearLayout>
